issue with overlapping text. alterted min width value again and image width to prevent issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 /* add styling to main site title header and nav */
 
 #menu {
-  font-size: 120%;
+  font-size: 3vw;
   letter-spacing: 2px;
   text-align: center;
 }
@@ -24,7 +24,7 @@ body {
 #menu li {
   display: inline-block;
   list-style-type: none;
-  margin: 1rem;
+  margin: 5px;
 }
 
 #menu a {
@@ -45,7 +45,7 @@ a:active {
 /* hero image and site title */
 
 #hero-outer {
-  height: 300px;
+  height: 250px;
   width: 100%;
   padding-top: 2%;
   overflow: hidden;
@@ -61,13 +61,13 @@ a:active {
 
 #site-title {
   color: #0063dcff;
-  font-size: 5vw;
+  font-size: 6vw;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 4px;
   margin: auto;
 
-  bottom: 20%;
+  bottom: 10%;
   left: 5%;
 
   position: absolute;
@@ -107,7 +107,7 @@ a:active {
 .box {
   /* padding-top: 100px; */
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(375px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-template-rows: auto;
   row-gap: 5px;
   grid-template-areas:
@@ -119,7 +119,7 @@ a:active {
     border: 2px solid #ddd;
     border-radius: 1px;
     padding: 5px;
-    width: 300px;
+    width: 250px;
   }
   
   img:hover {
